--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "log4js": "^0.6.29",
     "nedb": "^1.5.1",
     "superagent": "^1.6.1",
+    "superagent-proxy": "^1.0.0",
     "webpack": "^1.12.14"
   },
   "scripts": {
